--- a/css/pruebafinal1.css
+++ b/css/pruebafinal1.css
@@ -33,6 +33,20 @@ body {
 }
 
 /* foto principal */
+.container {
+    position: relative;
+    text-align: center;
+}
+.fondoizquierda {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+    border: 16px;
+}
+.textofondoizquierda {
+    position: relative;
+    text-align: justify;
+  }
 .fotoprincipal {
     width: 100%;
     height: 600px;
@@ -43,6 +57,7 @@ body {
     word-spacing: 2cm;
 }
 /* columnas rescate crowdfunding */
+
 .row {
     background-color: white;
     margin: 5px;
@@ -60,7 +75,7 @@ body {
 }
 .row .crowdfunding {
     width: 40%;
-    height: 45%;
+    height: 45%%;
 }
 .boton {
     background-color:#6cccac;
@@ -68,6 +83,10 @@ body {
     font-size: 1em;
     font-weight: bold;
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.boton a {
+    text-decoration: none;
+    color: white;
 }
 /* galeria de fotos */
 .uno {
@@ -121,18 +140,23 @@ footer p {
     color: white;
     font-size: 1.5em;
 }
+.footer ul {
+    padding-inline-start: 0%;
+}
 .footer {
     text-align: center;
-    word-spacing: 1px;
+    word-spacing: 20px;
 }
 .footer li a {
     color: white;
     text-decoration: none;
+    
 }
 
 .footer li {
     display: inline-block;
     font-size: 1.5em;
+    
     
 }
 .personalizado {
@@ -203,4 +227,3 @@ footer p {
     80% { transform: translate(-1px, -1px) rotate(1deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
-  }
